--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -140,7 +140,7 @@ headStyle(fontsize)
       top: calc(50% - 0.35rem)
       left: 0
       color: $light-red
-      content: "\f0c1"
+      content: "\f1dd"
       font: normal normal normal 14px / 1 FontAwesome
       font-size: 0.8rem
       transition: all 0.2s ease-out
@@ -262,11 +262,14 @@ a.fancybox
   img
     padding: $img-border-padding
     max-width: 100%
-    border: 1px solid $img-border-color
     transition: all 0.2s
 
     &:hover
       box-shadow: 0 0 8px 0 rgba(232, 237, 250, 0.6), 0 2px 4px 0 rgba(232, 237, 250, 0.5)
+
+.content, #sidebar
+  img
+    border: 1px solid $img-border-color
 
 .code-area-wrap
   position: relative
